Fix Safari wrapping issue

--- a/static/css/resume.css
+++ b/static/css/resume.css
@@ -151,7 +151,7 @@ a {
   background-color: #424242;
   margin: 2px;
   margin-left: 2px;
-  margin-right: 3px;
+  margin-right: 2px;
   padding: 2px;
   padding-left: 4px;
   padding-right: 4px;
